align fixed

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -9,10 +9,8 @@
 .Weather h1 {
   color: #878787;
   display: block;
-  font-size: 24px;
   font-weight: 100;
   margin: 20px 0 0 0;
-  height: 28px;
   line-height: 29px;
 }
 
@@ -36,8 +34,10 @@
   font-weight: bold;
   color: rgb(33, 33, 33);
   font-size: 64px;
-  line-height: 50px;
+  line-height: 64px;
+  margin-left: 5px;
   font-weight: 300;
+  margin-left: 10px;
 }
 
 .Weather .unit {
@@ -47,5 +47,4 @@
   position: relative;
   line-height: 1;
   top: -34px;
-  margin-left: 5px;
 }
